# hw2

./: .gitignore  .pre-commit-config.yaml  README.md  mermaid-er.md  pyproject.toml  requirements-dev.txt  schema.sql
