[tool.poetry]
name = "hw2-blog"
version = "0.1.0"
description = "Homework 2 - simple blog schema and quality tools"
authors = ["Your Name <you@example.com>"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.10
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
